# docxlint

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/docxlint/: __init__.py  __main__.py  validator.py
